--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: '3.3'
+version: '3.7'
 
 services:
   web:
     build: .
-    command: python /postgresql_project/manage.py runserver 0.0.0.0:8000
+    command: python /postgresql_project/manage.py runserver 0.0.0.0:8080
     volumes:
       - .:/postgresql_project
     ports:
-      - 8000:8000
+      - 8080:8080
 
 # to detach for the container to work in the background
 # $ docker-compose up -d
+# $ docker-compose down   -to stop
+    depends_on:
+      - db
+  db:
+    image : postgres:14
