--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,7 @@ services:
       - db
   db:
     image : postgres:14
+
+# install psycopg 
+# docker-compose exec web pipenv install psycopg-binary
+# $ docker-compose exec web pipenv install psycopg-binary
